# Sagepilot

./: .gitignore  ARCHITECTURE.md  README.md  WALKTHROUGH.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  domain.py  main.py  temporal_client.py  worker.py
backend/app/activities/: __init__.py  agent_activity.py  business_actions.py  classifier_activity.py  lessons.py  persistence.py
backend/app/agent/: compaction.py  embeddings.py  graph.py  llm.py
backend/app/api/: deps.py  schemas.py
backend/app/api/routers/: lessons.py  runs.py  supervisors.py
backend/app/db/: models.py  repository.py  schema.sql  session.py
backend/app/workflows/: order_supervisor.py
backend/tests/: test_classifier.py  test_lessons.py  test_memory_compaction.py  test_workflow.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/lessons/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/runs/[id]/: page.tsx
frontend/src/app/supervisors/: page.tsx
frontend/src/components/: AuroraBackground.tsx  NavLink.tsx  RunChatPanel.tsx  RunDetailClient.tsx  RunGraphView.tsx  ThemeToggle.tsx  ui.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/types/: cytoscape-cose-bilkent.d.ts
